Correctly handle overflow-y in sidenav

--- a/priv/css/main.css
+++ b/priv/css/main.css
@@ -40,6 +40,7 @@ a:hover {
     color: #ffffff;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 #sidenav.nav {
